--- a/pom.xml
+++ b/pom.xml
@@ -115,6 +115,22 @@
 </plugin>
 		</plugins>
 	</build>
+	<build>
+    <plugins>
+      <plugin>
+        <groupId>org.owasp</groupId>
+        <artifactId>dependency-check-maven</artifactId>
+        <version>INSERT_VERSION_HERE</version>
+        <executions>
+          <execution>
+            <goals>
+              <goal>check</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
+    </plugins>
+  </build>
 
 
 	 <distributionManagement>
